# hwwasm

./: Cargo.toml  LICENSE  README.md
.github/workflows/: report.yml
aslp/: Cargo.toml
aslp/tests/data/: generate.sh  sha1c.aslt  sha1h.aslt  sha1p.aslt  sha1su1.aslt  sha256h.aslt  sha256h2.aslt  sha256su0.aslt  sha256su1.aslt
example/sha1/: .clang-format  .gitignore  Makefile  intrinsics.h  opt.sh  sha1.c  sha1.h  sha1_bench.c  sha1_generic.c  sha1_intrinsics.c  sha1_test.c  trace.h  wasm_arm_neon.c  wasm_arm_neon.h
hwwasm/aslp/: Cargo.toml
hwwasm/src/: ir.rs  main.rs
report/: .gitignore  Makefile  acknowledgements.tex  artifacts.tex  discussion.tex  future.tex  intrinsics.tex  introduction.tex  references.bib  report.tex  results.tex  setup.tex  snippet.sh  summary.md  version.sh  wip.tex
report/snippets/: __intrinsic_vsha1h_u32.h  arm_neon_general.h  arm_neon_sha1.h  builtin.wat  sha1_intrinsics_rounds.c  vaddq_u32.h  vsha1cq_u32.c
results/: .gitignore  README.md
results/2024-11-29T03:27:51-sha1c/: metadata.json  native.json  wasmtime_baseline.json  wasmtime_hwwasm.json
results/2024-11-29T06:12:03-sha1pm/: metadata.json  native.json  wasmtime_baseline.json  wasmtime_hwwasm.json
results/2024-11-29T18:20:29-sha1h/: metadata.json  native.json  wasmtime_baseline.json  wasmtime_hwwasm.json
results/2024-11-29T19:33:15-sha1su0/: metadata.json  native.json  (+2 more)
script/: bench.sh
src/: lib.rs  main.rs  translate.rs
test-macros/: Cargo.toml
tools/: aarch64_asm.sh  download_data.sh  generate_intrinsics.py  parse_llvm_opts.py  results.py
(+86 files in other folders)
