[package]
name = "hwwasm-aslp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pest = "2.7.8"
pest_derive = "2.7.8"
enquote = "1.1.0"
clap = { version = "4.3", features = ["std", "derive"] }
anyhow = "1"
tracing = "0.1.26"
tracing-subscriber = "0.3.1"
hwwasm-test-macros = { path = "../test-macros" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
